--- a/backend/nginx/nginx.conf
+++ b/backend/nginx/nginx.conf
@@ -1,25 +1,17 @@
-upstream django {
-    # コンテナのサービス名を指定し、名前解決
-    server web:8001;
+upstream config {
+    # コンテナのサービス名を指定すると名前解決してくれる
+    server web:8000;
 }
- 
+
 server {
-    # 8000ポートで待ち受け
-    listen 8000;
-    server_name 127.0.0.1
+    # 80ポートで待ち受け
+    listen 80;
 
     location / {
-        proxy_pass http://django;
+        proxy_pass http://config;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $host;
         proxy_redirect off;
-     # gzip圧縮
-        gzip on;
-        gzip_min_length 1k;
-        gzip_types text/css text/javascript application/x-javascript application/javascript application/json image/svg+xml;
-        gzip_disable "msie6";
-        uwsgi_pass  django;
-        include     /etc/nginx/uwsgi_params;
     }
- 
+
 }
