--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,5 +6,6 @@ pillow
 pyjwt==1.7.1
 djangorestframework-simplejwt==4.3.0
 djoser==2.0.3
-uwsgi==2.0.18
+# uwsgi==2.0.18
 mysqlclient==1.4.6
+gunicorn
