--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "vee-validate": "^3.4.13",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
+    "vue-star": "0.0.4",
     "vuetify": "^2.4.0",
     "vuex": "^3.4.0",
     "vuex-persistedstate": "^4.1.0"
