--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.21.4",
     "core-js": "^3.6.5",
+    "moment": "^2.29.1",
     "vee-validate": "^3.4.13",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
