--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "moment": "^2.29.1",
     "vee-validate": "^3.4.13",
     "vue": "^2.6.11",
+    "vue-loading-template": "^1.3.2",
     "vue-router": "^3.2.0",
     "vue-star": "0.0.4",
     "vuetify": "^2.4.0",
